fix title on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -69,12 +69,13 @@ body
     bottom: 0
     z-index: 1
     text-indent: -9999px
-  h1 
-    font-size: 3.0rem
+  h1
+    overflow: visible
+    font-size: 2.55rem
     position: absolute
     padding: 15px 15px
     margin-left: 0px
-    margin-top: 360px
+    margin-top: 370px
     margin-bottom: 0px
     float: right
     color: black
